Solved 2 Problem with Stack

--- a/PS_acmicpc_net/PS_acmicpc_net/PS_acmicpc_net.vcxproj
+++ b/PS_acmicpc_net/PS_acmicpc_net/PS_acmicpc_net.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1000\1725.cpp" />
+    <ClCompile Include="9000\9012.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -89,6 +89,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <StackReserveSize>100000000</StackReserveSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
