--- a/PS_acmicpc_net/PS_acmicpc_net/PS_acmicpc_net.vcxproj
+++ b/PS_acmicpc_net/PS_acmicpc_net/PS_acmicpc_net.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1000\1463.cpp" />
+    <ClCompile Include="CP_Advanced_1\1_Greedy\1744x.cpp" />
+    <ClCompile Include="CP_Advanced_1\1_Greedy\2875.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
