--- a/PS_acmicpc_net/PS_acmicpc_net/PS_acmicpc_net.vcxproj.filters
+++ b/PS_acmicpc_net/PS_acmicpc_net/PS_acmicpc_net.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1000\1463.cpp">
+    <ClCompile Include="CP_Advanced_1\1_Greedy\1744x.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CP_Advanced_1\1_Greedy\2875.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
