--- a/PS_acmicpc_net/PS_acmicpc_net/PS_acmicpc_net.vcxproj
+++ b/PS_acmicpc_net/PS_acmicpc_net/PS_acmicpc_net.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CP_Advanced_1\1_Greedy\1080.cpp" />
+    <ClCompile Include="CP_Advanced_1\2_DivideAndConquer\2263.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
